tests/integration/per_document_grammar/type_system/multiple_single_choice/validation/02_valid_value_but_no_whitespace/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Requirement field of type MultipleChoice is invalid: A,E
CHECK: Location: {{.*}}input.sdoc:12:1
CHECK: Hint: MultipleChoice field requires ', '-separated values.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
